--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
     <link rel="stylesheet" type="text/css" href="%PUBLIC_URL%/css/responsive.css">
     <link rel="stylesheet" href="%PUBLIC_URL%/css/custom.css" />
 
-    <title>React App</title>
+    <title>Arūnas Bendoraitis</title>
     <style>
       html, body, #root {
         margin: 0;
